<resources>
    <string name="app_name">Emergency</string>
    <string name="user_id">User ID</string>
    <string name="username">Username</string>
    <string name="send">Send</string>
    <string name="update_databases">Update Databases</string>
    <string name="export_record">Export Record</string>
    <string name="approach_an_nfc_tag">Approach an NFC Tag</string>
    <string name="nfc">tap nfc card</string>
    <string name="full_name">Full Name</string>
    <string name="view_emergency_history">View Emergency History</string>
</resources>
